--- a/teshsuite/simdag/platforms/CMakeLists.txt
+++ b/teshsuite/simdag/platforms/CMakeLists.txt
@@ -5,13 +5,19 @@ set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}")
 add_executable(basic_parsing_test basic_parsing_test.c)
 add_executable(is_router_test is_router_test.c)
 add_executable(flatifier flatifier.c)
+add_executable(evaluate_parse_time Evaluate_parse_time.c)
+add_executable(evaluate_get_route_time Evaluate_get_route_time.c)
 
 ### Add definitions for compile
 if(NOT WIN32)
-target_link_libraries(basic_parsing_test simgrid m pthread )
-target_link_libraries(is_router_test simgrid m pthread )
-target_link_libraries(flatifier simgrid m pthread )
+target_link_libraries(evaluate_get_route_time simgrid m)
+target_link_libraries(evaluate_parse_time simgrid m)
+target_link_libraries(basic_parsing_test simgrid m)
+target_link_libraries(is_router_test simgrid m)
+target_link_libraries(flatifier simgrid m)
 else(NOT WIN32)
+target_link_libraries(evaluate_get_route_time simgrid)
+target_link_libraries(evaluate_parse_time simgrid)
 target_link_libraries(basic_parsing_test simgrid)
 target_link_libraries(is_router_test simgrid)
 target_link_libraries(flatifier simgrid)
