Add documentation pages for install Simgrid and bindings. Remove those sections from faq page.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -614,6 +614,8 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = index.doc \
+						 installSimgrid.doc \
+                         bindings.doc \
                          FAQ.doc \
                          contrib.doc \
                          publis.doc \
