Ignore generated toc files.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ doc/tmp.realtoc
 doc/using_bib.html
 doc/Doxyfile
 doc/footer.html
+*.doc.toc
 
 ################################################
 ### Specific of project 
