--- a/examples/msg/mc/CMakeLists.txt
+++ b/examples/msg/mc/CMakeLists.txt
@@ -4,6 +4,7 @@ set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}")
 
 add_executable(centralized centralized_mutex.c)
 add_executable(bugged1     bugged1.c)
+add_executable(bugged1_stateful bugged1_stateful.c)
 add_executable(bugged2     bugged2.c)
 add_executable(bugged3	   bugged3.c)
 add_executable(random_test random_test.c)
@@ -11,6 +12,7 @@ add_executable(example_automaton automaton.c automatonparse_promela.c example_au
 
 target_link_libraries(centralized simgrid m )
 target_link_libraries(bugged1     simgrid m )
+target_link_libraries(bugged1_stateful simgrid m)
 target_link_libraries(bugged2     simgrid m )
 target_link_libraries(bugged3     simgrid m )
 target_link_libraries(random_test     simgrid m )
