Add pages for ns3 and gtnets.

--- a/doc/index.php.in
+++ b/doc/index.php.in
@@ -15,7 +15,8 @@ echo '<?xml version="1.0" encoding="UTF-8"?>';
 
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title><?php echo $project_name; ?></title>
+	<title>SimGrid - Scalable simulation of distributed systems, ranging from grids to peer-to-peer systems</title>
+	<meta name="keywords" content="Scalable, simulation, distributed systems, grid, peer-to-peer" /> 
 	<script language="JavaScript" type="text/javascript">
 	<!--
 	function help_window(helpurl) {
