--- a/website/index.php.in
+++ b/website/index.php.in
@@ -1,159 +1,103 @@
 <?php 
-
-$domain=ereg_replace('[^\.]*\.(.*)$','\1',$_SERVER['HTTP_HOST']);
-$group_name=ereg_replace('([^\.]*)\..*$','\1',$_SERVER['HTTP_HOST']);
-
-echo '<?xml version="1.0" encoding="UTF-8"?>';
+$domain="gforge.inria.fr";
+$group_name="simgrid";
 ?>
-<!DOCTYPE html
-	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en   ">
-<link href="doc/doxygen.css" rel="stylesheet" type="text/css">
-<link href="doc/tabs.css" rel="stylesheet" type="text/css">
-
-  <head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" href="stylesheets/simgridsite.css" />
+	<link rel="stylesheet" type="text/css" href="stylesheets/simgridsitetabs.css" />
+ 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>SimGrid - Scalable simulation of distributed systems, ranging from grids to peer-to-peer systems</title>
 	<meta name="keywords" content="Scalable, simulation, distributed systems, grid, peer-to-peer" /> 
-	<script language="JavaScript" type="text/javascript">
-	<!--
-	function help_window(helpurl) {
-		HelpWin = window.open( helpurl,'HelpWindow','scrollbars=yes,resizable=yes,toolbar=no,height=400,width=400');
-	}
-	// -->
-		</script>
-
-<style type="text/css">
-	<!--
-	BODY {
-		margin-top: 3;
-		margin-left: 3;
-		margin-right: 3;
-		margin-bottom: 3;
-		background: #5651a1;
-	}
-	ol,ul,p,body,td,tr,th,form { font-family: verdana,arial,helvetica,sans-serif; font-size:small;
-		color: #333333; }
-
-	h1 { font-size: x-large; font-family: verdana,arial,helvetica,sans-serif; }
-	h2 { font-size: large; font-family: verdana,arial,helvetica,sans-serif; }
-	h3 { font-size: medium; font-family: verdana,arial,helvetica,sans-serif; }
-	h4 { font-size: small; font-family: verdana,arial,helvetica,sans-serif; }
-	h5 { font-size: x-small; font-family: verdana,arial,helvetica,sans-serif; }
-	h6 { font-size: xx-small; font-family: verdana,arial,helvetica,sans-serif; }
-
-	pre,tt { font-family: courier,sans-serif }
-
-	a:link { text-decoration:none }
-	a:visited { text-decoration:none }
-	a:active { text-decoration:none }
-	a:hover { text-decoration:underline; color:red }
-
-	.titlebar { color: black; text-decoration: none; font-weight: bold; }
-	a.tablink { color: black; text-decoration: none; font-weight: bold; font-size: x-small; }
-	a.tablink:visited { color: black; text-decoration: none; font-weight: bold; font-size: x-small; }
-	a.tablink:hover { text-decoration: none; color: black; font-weight: bold; font-size: x-small; }
-	a.tabsellink { color: black; text-decoration: none; font-weight: bold; font-size: x-small; }
-	a.tabsellink:visited { color: black; text-decoration: none; font-weight: bold; font-size: x-small; }
-	a.tabsellink:hover { text-decoration: none; color: black; font-weight: bold; font-size: x-small; }
-	-->
-</style>
 
 </head>
 
 <body>
-<table border="0" width="100%" cellspacing="0" cellpadding="0">
+<div id="header" align="center">
+<p>
+<img src="logos/simgrid_logo.png"  alt="SimGrid - Scalable simulation of distributed systems, ranging from grids to peer-to-peer systems" />
+</p>
+<h2 class="header"><i class="subtitle">Scalable simulation of distributed systems</i></h2>
+</div>
+<p/>
+<br/> 
+ <div id="navrow1" class="tabs" align="center">
+    <ul class="tablist">
+      <li><a href="index.php"><span>Home</span></a></li>
+                        <li><a href="https://gforge.inria.fr/frs/?group_id=12"><span>Download</span></a></li>
 
-	<tr>
-        <td style="text-align: left; vertical-align: top;"><a href="http://<?php echo $domain; ?>/projects/<?php echo $group_name; ?>"><img
-          src="simgrid_logo_small.png"
-          style="text-decoration: underline;" border="0" alt="SimGrid">
-          <?php if (date('m') == '04'  && date('d') == '01')  {echo '<img style="text-decoration: underline;" border="0" alt="SimGrid" src="fish.gif">';}?>
-          </a><br>
-        </td>
-         <td style="text-align: left; vertical-align: top;">
-        </td>
-		<td style="text-align: right; vertical-align: top;"><a href="http://<?php echo $domain; ?>"><img src="http://<?php echo $domain; ?>/themes/inria/images/logo.png" border="0" alt="gforge INRIA" width="198" height="52" /></a></td>
-	</tr>
-</table>
-______ONGLETS______
-<table border="0" width="100%" cellspacing="0" cellpadding="0">
+      <li><a href="documentation.php"><span>Online documentation</span></a></li>
+      <li><a href="publis.html"><span>Publications</span></a></li>
+      <li><a href="people.html"><span>People</span></a></li>
+      <li><a href="history.html"><span>History</span></a></li>
+      <li><a href="contrib.html"><span>Contrib</span></a></li>
+      <li><a href="faq.html"><span>FAQ&#160;Page</span></a></li>
 
-	<tr>
-		<td>&nbsp;</td>
-		<td colspan="3">
+      <li><a href="http://gforge.inria.fr/projects/simgrid"><span>SimGrid&#160;Forge</span></a></li>
+    </ul>
+  </div>
+<table width="80%" cellpadding="5" cellspacing="0" border="0" align="center">
+
+<tr><td width="75%" valign="top">
+<h1>Welcome to the SimGrid project!</h1>
+<h1>SimGrid in a nutshell:</h1>
+<p>SimGrid is a toolkit that provides core functionalities for the simulation of distributed applications in heterogeneous distributed environments. The specific goal of the project is to facilitate research in the area of parallel and distributed large scale systems, such as Grids, P2P systems and clouds. Its use cases encompass heuristic evaluation, application prototyping or even real application development and tuning
+</p>
+<h2>What SimGrid can do for you ?</h2>
+<ul>
+
+<li>
+<b>SimGrid as a Grid Simulator</b>: Accurate yet fast simulation models
+</li>
+<li>
+<b>SimGrid as a P2P simulator</b>: Highly scalable simulations (we managed to simulate 2M hosts on a single machine (see <a href="http://hal.inria.fr/inria-00602216/">here for an example of it</a>)
+</li>
+<li>
+<b>SimGrid as a MPI simulator</b>: SimGrid provides an API to simulate reallisticaly MPI simulation
+</li>
+<li><b>And so much more</b>: SimGrid comes with a whole ecosystem of applications, for example tools to visualize and analyse your simulation results and traces, platform generation ..., and with so fancy features to help you to handle your platform dynamicity simulation (quantitative resource sharing or qualitative churn)
+</li>
+</ul>
+<h2>Main strengths</h2>
+<ul>
+
+<li><b>Scalable</b>: Fast, low memory footprint</li>
+<li><b>Sound simulation models</b>: theoretically and experimentally assessed</li>
+<li><b>Portable</b>: Unix/ Windows ; Numerous bindings (write your simulators in C, Lua or Java or Ruby)</li>
+<li><b>User interfaces</b>: models and API to simulate many different distributed systems, ranging from grid to peer-to-peer</li>
+</ul>
 
 
-		<!-- start tabs -->
+<h2>Tool dissemination</h2>
+<ul>
 
-	<tr>
-		<td align="left" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/topleft.png" height="9" width="9" alt="" /></td>
-		<td bgcolor="#E0E0E0" width="30"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="30" height="1" alt="" /></td>
-		<td bgcolor="#E0E0E0"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="1" height="1" alt="" /></td>
-		<td bgcolor="#E0E0E0" width="30"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="30" height="1" alt="" /></td>
-		<td align="right" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/topright.png" height="9" width="9" alt="" /></td>
-	</tr>
+<li>Grounded experiments of +50 scientific papers</li>
+<li>+100 member of the simgrid-user mailing list</li>
+<li>+5 associated tools provided by the community</li>
+</ul>
+<h2>Would you like to know more? </h2>
+<ul>
+<li>The <a href="documentation.php">documentation</a> contains docs for the latests version of the tool. Each documentation contains examples, description of the different modules of the projects, and many more</li>
+<li>In case of trouble, try to ask the mailing list !</li>
+<li>A tutorial is also available <a href="http://www.loria.fr/~quinson/articles/simgrid-tutorial.pdf ">here</a></li>
+<li>Are you interested on the scientific ground of SimGrid ? Take a look at our <a href="publis.html">publications</a> !</li>
+<li>Do you want to know the whole story of SimGrid, since when it all began ? <a href="history.html">Here is the tale of SimGrid</a></li>
+<!--li>Is SimGrid is actually maintained ? So many other related projects have died due to a lack of resources or good scientific ground, but we're alive since more than 10 years.  Will SimGrid survive to next years ? Take a look at our <a href="IhaveToWriteIT.html">foundation section</a></li-->
+</ul>
 
-	<tr>
-
-		<!-- Outer body row -->
-
-		<td bgcolor="#E0E0E0"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="10" height="1" alt="" /></td>
-		<td valign="top" width="99%" bgcolor="#E0E0E0" colspan="3">
-
-			<!-- Inner Tabs / Shell -->
-
-			<table border="0" width="100%" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="left" bgcolor="#ffffff" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/topleft-inner.png" height="9" width="9" alt="" /></td>
-				<td bgcolor="#ffffff"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="1" height="1" alt="" /></td>
-				<td align="right" bgcolor="#ffffff" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/topright-inner.png" height="9" width="9" alt="" /></td>
-			</tr>
-
-			<tr>
-				<td bgcolor="#ffffff"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="10" height="1" alt="" /></td>
-				<td valign="top" width="99%" bgcolor="white">
-
-	<!-- whole page table -->
-<table width="100%" cellpadding="5" cellspacing="0" border="0">
-<tr><td width="65%" valign="top">
-<?php if ($handle=fopen('http://'.$domain.'/export/projtitl.php?group_name='.$group_name,'r')){
-$contents = '';
-while (!feof($handle)) {
-	$contents .= fread($handle, 8192);
-}
-$contents=str_replace("Welcome to", "Welcome to the", $contents);
-fclose($handle);
-echo $contents; } ?>
-______BODY______
-
+<h1></h1>
 </td>
-
-<td width="35%" valign="top">
-
-		<table cellspacing="0" cellpadding="1" width="100%" border="0" bgcolor="#d5d5d7">
+<td width="25%" valign="top">
+		<table cellspacing="0" cellpadding="1" width="100%" border="0">
 		<tr><td>
-			<table cellspacing="0" cellpadding="2" width="100%" border="0" bgcolor="#eaecef">
-				<tr style="background-color:#d5d5d7" align="center">
-					<td colspan="2"><span class="titlebar">Project Summary</span></td>
+			<table cellspacing="0" cellpadding="2" width="100%" border="0" class="tablecontent">
+				<tr  align="center">
+					<td colspan="2"></td>
 				</tr>
 				<tr align="left">
 					<td colspan="2">
-
-<?php if($handle=fopen('http://'.$domain.'/export/projhtml.php?group_name='.$group_name,'r')){
-$contents = '';
-while (!feof($handle)) {
-	$contents .= fread($handle, 8192);
-}
-fclose($handle);
-$contents=str_replace('href="/','href="http://'.$domain.'/',$contents);
-$contents=str_replace('src="/','src="http://'.$domain.'/',$contents);
-echo $contents; } ?>
-<br>
-<hr>
-<br>
 <?php if ($handle=fopen('http://'.$domain.'/export/projnews.php?group_name='.$group_name,'r')){
 $contents = '';
 while (!feof($handle)) {
@@ -168,47 +112,28 @@ echo $contents; } ?>
 				</tr>
 			</table>
 		</td></tr>
-		</table><p>&nbsp;</p>
-</td></tr>
-		<tr><td align=center>
-			<a href="http://creativecommons.org/licenses/LGPL/2.1/"><img alt="CC-GNU LGPL" border="0" src="http://creativecommons.org/images/public/cc-LGPL-a.png" /></a>
-		</td></tr>
+		</table>
+</td>
+</tr>
 </table>
-			&nbsp;<p>
-                        <center>
-                                Help: <a href="mailto:siteadmin-help@lists.gforge.inria.fr">siteadmin-help@lists.gforge.inria.fr</a> Webmaster: <a href="mailto:webmaster@gforge.inria.fr">webmaster@gforge.inria.fr</a>
-                        </center>
-			<!-- end main body row -->
+<div id="footer" align="center">
+<p>
+ Help: <a href="mailto:siteadmin-help@lists.gforge.inria.fr">siteadmin-help@lists.gforge.inria.fr</a> Webmaster: <a href="mailto:webmaster@gforge.inria.fr">webmaster@gforge.inria.fr</a>
 
+</p>
+<p>
+<ul class="footerlogos">
+	<li><a href="http://www.inria.fr/"><img align="left" src="logos/logo_INRIA.png" alt="INRIA"/></a>	
+	</li>
+	<li><a href="http://gforge.org/"><img src="http://gforge.org/images/pow-gforge.png" alt="Powered By GForge Collaborative Development Environment" border="0"/></a>
 
-				</td>
-				<td width="10" bgcolor="#ffffff"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="2" height="1" alt="" /></td>
-			</tr>
-			<tr>
-				<td align="left" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/bottomleft-inner.png" height="11" width="11" alt="" /></td>
-				<td bgcolor="#ffffff"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="1" height="1" alt="" /></td>
-				<td align="right" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/bottomright-inner.png" height="11" width="11" alt="" /></td>
-			</tr>
-			</table>
+	</li>
+	<li><a href="http://creativecommons.org/licenses/LGPL/2.1/"><img alt="CC-GNU LGPL" border="0" src="http://creativecommons.org/images/public/cc-LGPL-a.png" /></a>
 
-		<!-- end inner body row -->
-
-		</td>
-		<td width="10" bgcolor="#E0E0E0"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="2" height="1" alt="" /></td>
-	</tr>
-	<tr>
-		<td align="left" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/bottomleft.png" height="9" width="9" alt="" /></td>
-		<td bgcolor="#E0E0E0" colspan="3"><img src="http://<?php echo $domain; ?>/themes/inria/images/clear.png" width="1" height="1" alt="" /></td>
-		<td align="right" bgcolor="#E0E0E0" width="9"><img src="http://<?php echo $domain; ?>/themes/inria/images/tabs/bottomright.png" height="9" width="9" alt="" /></td>
-	</tr>
-</table>
-
-<!-- PLEASE LEAVE "Powered By Gforge" on your site -->
-<br />
-<center>
-<a href="http://gforge.org/"><img src="http://gforge.org/images/pow-gforge.png" alt="Powered By GForge Collaborative Development Environment" border="0" /></a>
-</center>
-
-
+	</li>
+</ul>
+	
+</p>
+</div>
 </body>
 </html>
