Remove gtnets and ns3 pages for one: Packet level simulation.

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -619,8 +619,7 @@ INPUT                  = index.doc \
                          options.doc \
                          tracing.doc \
                          use.doc \
-                         gtnets.doc \
-                         ns3.doc \
+                         pls.doc \
                          ./index-API.doc \
                          modules.doc \
                          module-xbt.doc \
