--- a/website/documentation.php.in
+++ b/website/documentation.php.in
@@ -2,25 +2,34 @@
 
 
 function list_files($dir){
+         $arrayDoc = array();
         $hidden = ".";
         if (is_dir($dir)) {
                 if ($dh = opendir($dir)) {
                         echo "<ul>\n";
                         while (($file = readdir($dh)) !== false) {
                                 if (is_dir($file) && preg_match("/^[0-9]/", $file)){
-                                        echo "<li><a href=\"" . $dir . "/" . $file . "/doc/\"> Simgrid version " . $file . "</a></li>";
+                                             $arrayDoc[] = $file;
                                 }				
                         }
-                        closedir($dh);
-                        echo "</ul>";
+                        closedir($dh);                       
                 }
         }
         else {
                 echo "No version now.\n";
         }
+    // Warning : won't work with version numbers upper than 9 !
+    sort($arrayDoc, SORT_STRING);
+    for($i=sizeof($arrayDoc);$i>=0;$i--) 
+    { if ($arrayDoc[$i] != "")
+   	     {echo "<li><a href=\"" . $dir . "/" . $arrayDoc[$i] . "/doc/\"> Simgrid version " . $arrayDoc[$i] . "</a>.</li>";}
+
+    } 
+	 echo "</ul>";
 }
 
 ?>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -45,8 +54,7 @@ function list_files($dir){
  <div id="navrow1" class="tabs" align="center">
     <ul class="tablist">
       <li><a href="index.php"><span>Home</span></a></li>
-                        <li><a href="https://gforge.inria.fr/frs/?group_id=12"><span>Download</span></a></li>
-
+                        <li><a href="download.php"><span>Download</span></a></li>
       <li><a href="documentation.php"><span>Online documentation</span></a></li>
       <li><a href="publis.html"><span>Publications</span></a></li>
       <li><a href="people.html"><span>People</span></a></li>
@@ -66,21 +74,18 @@ The documentation for SimGrid is maintained for the latest versions. It contains
 </table>
 <div id="footer" align="center">
 <p>
- Help: <a href="mailto:siteadmin-help@lists.gforge.inria.fr">siteadmin-help@lists.gforge.inria.fr</a> Webmaster: <a href="mailto:webmaster@gforge.inria.fr">webmaster@gforge.inria.fr</a>
-
-</p>
-<p>
-<ul class="footerlogos">
-	<li><a href="http://www.inria.fr/"><img align="left" src="logos/logo_INRIA.png" alt="INRIA"/></a>	
+<ul class="footerlogos">	           
+	<li><a href="http://www.inria.fr/"><img align="center" src="logos/INRIA.png" alt="INRIA"/></a>	
 	</li>
-	<li><a href="http://gforge.org/"><img src="http://gforge.org/images/pow-gforge.png" alt="Powered By GForge Collaborative Development Environment" border="0"/></a>
-
+	<li><a href="http://www.cnrs.fr/"><img align="center" src="logos/cnrs.png" alt="CNRS"/></a>	
+	</li>	
+	<li><a href="http://www.univ-nancy2.fr/"><img align="center" src="logos/UnivNancy2.png" alt="Université Nancy 2"/></a>	
 	</li>
-	<li><a href="http://creativecommons.org/licenses/LGPL/2.1/"><img alt="CC-GNU LGPL" border="0" src="http://creativecommons.org/images/public/cc-LGPL-a.png" /></a>
-
+	<li><a href="http://manoa.hawaii.edu/"><img align="center" src="logos/UnivHawaiiManoa.png" alt="Univeristy of Hawaii Manoa"/></a>	
 	</li>
-</ul>
-	
+	<li><a href="http://www.agence-nationale-recherche.fr/"><img align="center" src="logos/ANR.png" alt="ANR"/></a>	
+	</li>
+</ul>	
 </p>
 </div>
 </body>
