--- a/website/download.php.in
+++ b/website/download.php.in
@@ -67,7 +67,7 @@ echo $toPrint; } ?>
 	</li>
 	<li><a href="http://www.cnrs.fr/"><img align="center" src="logos/cnrs.png" alt="CNRS"/></a>	
 	</li>	
-	<li><a href="http://www.univ-nancy2.fr/"><img align="center" src="logos/UnivNancy2.png" alt="Université Nancy 2"/></a>	
+	<li><a href="http://www.uhp-nancy.fr/"><img align="center" src="logos/logo_uhp.png" alt="Université Nancy  Henri Poincarré"/></a>	
 	</li>
 	<li><a href="http://manoa.hawaii.edu/"><img align="center" src="logos/UnivHawaiiManoa.png" alt="Univeristy of Hawaii Manoa"/></a>	
 	</li>
